--- a/main.ipynb
+++ b/main.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "   userid  itemid  rating\n0       1       1       5\n1       1       2       3\n2       1       3       4\n3       1       4       3\n4       1       5       3",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>userid</th>\n      <th>itemid</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>4</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>5</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,11 +113,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   userid  itemid  rating\n0       0       0       5\n1       0       1       3\n2       0       2       4\n3       0       3       3\n4       0       4       3",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>userid</th>\n      <th>itemid</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>1</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>2</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>3</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>4</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create the encoder\n",
-    "ratings, uencoder, iencoder = ids_encoder(ratings)"
+    "ratings, uencoder, iencoder = ids_encoder(ratings)\n",
+    "ratings.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1 Задание"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Коэффициент Жаккара"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "def jaccard_similarity(user1, user2):\n",
+    "    movies_user1 = set(ratings[user1].keys())\n",
+    "    movies_user2 = set(ratings[user2].keys())\n",
+    "\n",
+    "    common_movies = movies_user1.intersection(movies_user2)\n",
+    "    all_movies = movies_user1.union(movies_user2)\n",
+    "\n",
+    "    jaccard_index = len(common_movies) / len(all_movies)\n",
+    "\n",
+    "    return jaccard_index"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Скалярное произведение общих рейтингов"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def dot_product_similarity(user1, user2):\n",
+    "    common_movies = set(ratings[user1].keys()).intersection(set(ratings[user2].keys()))\n",
+    "\n",
+    "    dot_product = 0\n",
+    "    for movie in common_movies:\n",
+    "        dot_product += ratings[user1][movie] * ratings[user2][movie]\n",
+    "\n",
+    "    return dot_product"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Скорректированная Кореляция Пирсона"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def pearson_correlation(user1, user2):\n",
+    "    ratings_user1 = [ratings[user1][movie] for movie in ratings[user1] if movie in ratings[user2]]\n",
+    "    ratings_user2 = [ratings[user2][movie] for movie in ratings[user1] if movie in ratings[user2]]\n",
+    "\n",
+    "    mean_user1 = np.mean(ratings_user1)\n",
+    "    mean_user2 = np.mean(ratings_user2)\n",
+    "\n",
+    "    numerator = sum([(rating_user1 - mean_user1) * (rating_user2 - mean_user2) for rating_user1, rating_user2 in zip(ratings_user1, ratings_user2)])\n",
+    "    denominator = np.sqrt(sum([(rating_user1 - mean_user1)**2 for rating_user1 in ratings_user1]) * sum([(rating_user2 - mean_user2)**2 for rating_user2 in ratings_user2]))\n",
+    "\n",
+    "    pearson_corr = numerator / denominator if denominator != 0 else 0\n",
+    "\n",
+    "    common_movies = set(ratings[user1].keys()).intersection(set(ratings[user2].keys()))\n",
+    "\n",
+    "    return pearson_corr * min(1, common_movies / 50)"
    ],
    "metadata": {
     "collapsed": false
