--- a/main.ipynb
+++ b/main.ipynb
@@ -135,6 +135,26 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def normalize(ratings: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Normalize ratings by user\"\"\"\n",
+    "    # calculate mean for every user\n",
+    "    mean = ratings.groupby(by=\"userid\", as_index=False)[\"rating\"].mean()\n",
+    "    norm_ratings = pd.merge(ratings, mean, suffixes=(\"\", \"_mean\"), on=\"userid\")\n",
+    "\n",
+    "    # normalize each rating by substracting the mean rating of the corresponding user\n",
+    "    norm_ratings[\"norm_rating\"] = norm_ratings[\"rating\"] - norm_ratings[\"rating_mean\"]\n",
+    "\n",
+    "    return norm_ratings[ratings.columns.tolist() + [\"norm_rating\"]]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## 1 Задание"
@@ -228,6 +248,135 @@
     "    common_movies = set(ratings[user1].keys()).intersection(set(ratings[user2].keys()))\n",
     "\n",
     "    return pearson_corr * min(1, common_movies / 50)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 2 Задание"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Простое усреднение по ближайшим соседям"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def get_neighbors(user, similarity_func, k=5):\n",
+    "    users_similarity = []\n",
+    "    for cur_user in ratings:\n",
+    "        if cur_user != user:\n",
+    "            similarity = similarity_func(cur_user, user)\n",
+    "            users_similarity.append((user, similarity))\n",
+    "\n",
+    "    users_similarity = sorted(users_similarity, key=lambda x: x[1], reverse=True)\n",
+    "    top_k_neighbors = users_similarity[:k]\n",
+    "\n",
+    "    return top_k_neighbors"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def rating_predictions_1(user, movie_id, similarity_func, k=5):\n",
+    "   neighbors = get_neighbors(user, similarity_func, k)\n",
+    "\n",
+    "   numerator = sum([similarity * ratings[user1][movie_id] for user1, similarity in neighbors])\n",
+    "   denominator = sum([abs(similarity) for user1, similarity in neighbors])\n",
+    "\n",
+    "   return numerator / denominator"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Усреднение с учётом коррекции среднего"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def rating_predictions_2(user, movie_id, similarity_func, k=5):\n",
+    "   neighbors = get_neighbors(user, similarity_func, k)\n",
+    "   mean_user = np.mean(ratings[user])\n",
+    "\n",
+    "   numerator = sum([similarity * (ratings[user1][movie_id] - np.mean(ratings[user1])) for user1, similarity in neighbors])\n",
+    "   denominator = sum([abs(similarity) for user1, similarity in neighbors])\n",
+    "\n",
+    "   return mean_user + (numerator / denominator)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 3 Задание"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Разделите датасет movielens на тренировочную и валидационную части. Постройте рекомендации для пользователей из валидационной части"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "train_data, test_data = train_test_split(ratings, test_size=0.2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def recommend_movies(user_id, train_data, num_recommendations=5):\n",
+    "    # Вычисляем средний рейтинг для каждого фильма\n",
+    "    movie_means = train_data.groupby('movieId')['rating'].mean()\n",
+    "    # Получаем уже оцененные пользователем фильмы\n",
+    "    watched_movies = train_data[train_data['userId'] == user_id]['movieId']\n",
+    "    # Рекомендуем фильмы с наивысшим средним рейтингом, которые пользователь еще не вид"
    ],
    "metadata": {
     "collapsed": false
